# cat-and-dog-image-classifier

./: .gitignore  fcc_cat_dog.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
